--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <script src="assets/js/gtfs.js"></script>
     <script src="assets/js/route.js"></script>
     <script src="assets/js/map.js"></script>
+    <script src="assets/js/changes.js"></script>
 
     <script src="assets/js/routes-panel.js"></script>
 </head>
@@ -34,12 +35,14 @@
     <div id="ui" ng-controller="RoutesPanelCtrl">
         <div class="routes-list" ng-hide="selectedRoute">
             <div class="routes-list-header">
-                <div class="button" ng-click="updateRoutes()" ng-bind="routes ? 'Update routes' : 'Load routes'"></div>
+                <button ng-click="updateRoutes()" ng-bind="routes ? 'Update routes' : 'Load routes'"></button>
             </div>
             <div ng-repeat="route in routes" class="route-container" ng-include="'assets/templates/route.html'">
             </div>
         </div>
         <div class="route-details" ng-if="selectedRoute">
+            <button ng-click="getChanges(selectedRoute, tableInstance);">Get changes</button>
+            <button ng-click="backToRoutes();">Back to list</button>
             <div ng-init="route = selectedRoute">
                 <div class="route-way-schema" class="route-container" ng-include="'assets/templates/route.html'"></div>
                 <div class="route-stops">
@@ -52,15 +55,15 @@
                                        afterInit: afterTableInit}">
                             <hot-column data="rowId" renderer="platformRenderer" readonly title="'Platform'"></hot-column>
                             <hot-column data="role" title="'Role'" type="'text'"></hot-column>
-                            <hot-column data="tags.ref" title="'Ref'" type="'text'"></hot-column>
-                            <hot-column data="tags.name" title="'Name'" type="'text'"></hot-column>
+                            <hot-column data="ref" title="'Ref'" type="'text'"></hot-column>
+                            <hot-column data="name" title="'Name'" type="'text'"></hot-column>
                         </hot-table>
                     </div>
                     <div class="route-stops-table">
                         <div ng-hide="extStops">
                             <div>Load CSV with stops</div>
                             <textarea id="stopsTextarea" ng-model="stopsText" rows="15"></textarea>
-                            <div ng-show="stopsText" ng-click="extStops = parseStops(stopsText)">parse</div>
+                            <button ng-show="stopsText" ng-click="extStops = parseStops(stopsText)">parse</button>
                         </div>
                         <hot-table datarows="extStops" ng-show="extStops">
                             <hot-column data="num" title="'#'"></hot-column>
